Thu Jul 01 18:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Make ([setPort:secure:]) return a status.
	* WebServerBundles.m: Check that web server is able to start.
	* WebServer.h: ditto

Wed Jun 30 05:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Use ./obj as location for library to link,
	for initial case where we link the bundles before installing
	the library.
	* WebServer.m: Add casts to prevent compiler warning.
	* Postgres.m: Commented out NSLog() left over from debugging.

Tue Jun 29 18:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix code for retrieving reference name ... look in
	the config dictionary first, and in user defaults if not found
	there.
	* SQLClient.h: Document change.
	* GNUmakefile: Link bundles with the library to ensure that they
	find the SQLRecord class when loaded.

Mon Jun 28 12:55:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.h: New file.
	* WebServer.m: New file.
	* WebServerBundles.m: New file.
	* SQLClient.h: Mention WebServer.
	* GNUmakefile: Build WebServer classes.
	Added framework to make it easy to use SQLClient to produce
	standalone http/https applications, such as accepting POST'ed
	records for addition to a database.

Fri May 07 09:15:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	Add methods to log duration of any statements over a certain
	limit.
	Tidy instance variables ... prefix mprivate ones with underscore.
	Install header!

Thu Apr 29 15:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Fix URLs in documentation as suggested by Adam.
	* SQLClient.html: regenerate

Mon Apr 26 16:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	Initial checkin of library.